apps/base/rancher/rancher-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rancher.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: rancher
          port: 80        # HTTP backend
          scheme: http
          passHostHeader: true
  tls: {}                 # Traefik uses your wildcard cert for *.lab.mainertoo.com
